compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__assignability_into_boolean.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var b : boolean\n\nvar _v00 : boolean := b\n"
---
"b"@"src/main.t:4..5" [ConstVar(Var, No)]: boolean
"_v00"@"src/main.t:21..25" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
