compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__bare_var_decl.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var k k := 3"
---
"k"@"src/main.t:4..5" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
