compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_not.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Compatibility with all variant of integers\n    var i : int\n    var n : nat\n    var _i := not i\n    var _n := not n\n"
---
"i"@"src/main.t:58..59" [ConstVar(Var, No)]: int
"n"@"src/main.t:74..75" [ConstVar(Var, No)]: nat
"_i"@"src/main.t:90..92" [ConstVar(Var, No)]: nat
"_n"@"src/main.t:110..112" [ConstVar(Var, No)]: nat
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
